2007-12-18  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildCmdPkgDevelStandardDev): Remove
	process substitution.
	(CygbuildCmdInstallCheckDirEmpty): Remove process substitution.
	(CygbuildCmdInstallMain): Send path to custom install script.
	(CygbuildLibInstallEnvironment): Add quotes.
	(CygbuildDefineEnvClear): Unset INCLUDE_PATH
	(CygbuildShellEnvironenment): Remove INCLUDE_PATH
	(CygbuildCmdStripMain): Strip also *.so.
	(CygbuildObjDumpLibraryDepList): New.
	(CygbuildCygcheckMain: New implementation.
	(CygbuildCygcheckLibraryDepGrepTraditonal): New.
	(CygbuildCmdInstallMain): Send absolute path to external install
	script.
	(CygbuildBootVariablesId): Add CYGBUILD_PROG_FULLPATH
	(CygbuildBootVariablesGlobalMain): Add *.dll to
	CYGBUILD_MATCH_FILE_EXE
	(CygbuildInstallFixPermissions): New implementation.

2007-12-15  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdInstallMain): Feed messages from
	install-after.sh through `CygbuildMsgFilter'.
	(CygbuildMsgFilter): Treat >> and --- messages. Ner perl $ENV
	implemantation.
	(CygbuildBootVariablesGlobalColors): Add more color variations.
	(CygbuildCmdInstallCheckBinFiles): Fix 'Binary name clash' message.

2007-12-14  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/postinstall.sh.tmp (InstallConffiles): Add cmp(1).
	(CygbuildDefineGlobalMain): Rename CYGBUILD_FILE_MANIFEST_TO and
	CYGBUILD_FILE_MANIFEST_FROM
	(CygbuildInstallCygwinPartMain): Treat new postinstall-manifest.lst
	(CygbuildCmdInstallCheckPkgDocdir): Renamed. Was
	`CygbuildCmdInstallCheckDocPages'.
	(CygbuildCmdInstallCheckDocdir): New.
	(CygbuildCmdInstallCheckMain): Use `CygbuildCmdInstallCheckDocdir'.
	(CygbuildFileSize): New.
	(CygbuildCmdInstallCheckSetupHintSdesc): Check that starting
	sentence is capitalized.
	(CygbuildPatchApplyMaybe): Fine tune message display. Unpatch: exit
	immediately is there is no CYGWIN-PATCHES/done-patch.tmp. Adjust
	verbose during 'GBS compat' mode.